Стилизация главной страницы

--- a/source/less/button.less
+++ b/source/less/button.less
@@ -1,4 +1,6 @@
-.button, .product-button {
+.button{
+  .a-none (@basic_white);
+  .a-active (@basic_color-add);
   display: inline-block;
   text-align: center;
   width: 280px;
@@ -6,12 +8,7 @@
   background-color: @basic_color;
   font-size: 16px;
   padding: 16px 44px 8px 44px;
-  .a-none (@basic-white);
-  .a-active (@basic_color-add);
 }
 .button-all{
   background-color: @basic_color;
-}
-.diet__link{
-  .a-none (@title_color);
 }
