--- a/source/less/colors.less
+++ b/source/less/colors.less
@@ -9,7 +9,7 @@
 @status_error: #FF8282;
 @title_color: #000000;
 @info_color: #111111;
-@basic-white: #FFFFFF;
-@bg-example: #EAEAEA;
-@border-bottem: #E6E6E6;
-@border-diet: #D9D9D9;
+@basic_white: #FFFFFF;
+@bg_example: #EAEAEA;
+@border_bottem: #E6E6E6;
+@border_diet: #D9D9D9;
