--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,24 +7,20 @@
 @import "base/layout";
 
 // blocks index
-@import "navigation";
-@import "diet";
-@import "description";
-@import "example";
-@import "footer";
+@import "blocks/navigation";
+@import "blocks/diet";
+@import "blocks/description";
+@import "blocks/example";
+@import "blocks/footer";
 
 // blocks form
-@import "cat-profile";
+@import "blocks/cat-profile";
 // blocks catalog
-@import "product";
+@import "blocks/product";
 body {
   font-family: "Oswald", Arial, sans-serif;
   font-weight: 400;
-  min-width: 320px;
-  margin: 0;
-  padding: 0;
 }
-.page-main{.center;}
 .visually-hidden {
   position: absolute;
   width: 1px;
