--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,25 +1,22 @@
 .center {
-  @media(max-width: 768px){
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  @media(min-width: 1280px){
-
-  }
-
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+  @media(min-width: 768px){}
+  @media(min-width: 1280px){}
 }
 .unpadding {
   padding: 0;
   margin: 0;
 }
-
 .a-none (@color){
   text-decoration: none;
   color: @color;
   text-transform: uppercase;
 }
-
+.diet__link{
+  .a-none (@title_color);
+}
 .li-none{
   list-style: none;
   padding: 0;
