Стилизация главной страницы

--- a/source/less/blocks/diet.less
+++ b/source/less/blocks/diet.less
@@ -11,7 +11,9 @@
   padding-top: 27px;
   margin: 0;
 }
-.diet__title,
+.diet__title {
+  font-weight: 400;
+}
 .diet__caption {
   font-weight: 400;
 }
@@ -21,8 +23,11 @@
   margin: 0;
   text-transform: uppercase;
 }
-.diet__title,
-.diet__slogan{
+.diet__title {
+  color:@basic_white;
+  text-align: center;
+}
+.diet__slogan {
   color:@basic_white;
   text-align: center;
 }
@@ -49,7 +54,15 @@
   margin: 0 auto;
   margin-bottom: 22px;
 }
-.slimming-diet,
+.slimming-diet{
+  background-color: @basic_grey;
+  width: 280px;
+  height: 266px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 33px;
+}
 .diet-weight-gain{
   background-color: @basic_grey;
   width: 280px;
@@ -69,10 +82,10 @@
 .diet__icon{
   .size(50px, 50px);
 }
-.icon__slim--indents{
+.diet__icon--indents-slim{
   margin-right: 19px;
 }
-.icon__strong--indents{
+.diet__icon--indents-strong{
   margin-right: 11px;
 }
 .diet__subtitle{
