--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,9 +1,101 @@
+.product__wrapper{
+  .center__no-frame;
+}
+.product__all-box{
+  padding: 0 20px;
+}
 .main-catalog__title {
+  .center__no-frame;
   .font__size(36px, 36px);
   color: @title_color;
+  margin-top: 27px;
+  margin-bottom: 8px;
+  padding-left: 20px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid @basic_grey-add;
 }
-.product__list,
-.additional-goods__list{
+.product__list{
   .li-none;
   .unpadding;
+}
+.product__title{
+  .font__size(16px, 20px);
+  text-transform: uppercase;
+  width: 76px;
+  height: 41px;
+  margin-top: 0;
+  margin-bottom: 18px;
+}
+.product__box{
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 13px;
+
+}
+.product__description{
+  width: 100%;
+}
+.details-label{
+  .font__size(12px, 16px);
+  .font__arial;
+}
+.details-value{
+  .font__size(12px, 16px);
+  .font__arial;
+}
+.details-row {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.product__item{
+  border-bottom: 1px solid @basic_grey-add;
+  margin-bottom: 8px;
+}
+.all-goods{
+  margin-top: 17px;
+  padding: 0 20px 25px 20px;
+  border-bottom: 1px solid @basic_grey-add;
+}
+.all-product__watch{
+  position: relative;
+  display: block;
+  .size(30px, 30px);
+  margin: 0 auto;
+}
+.plus{
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: "";
+  width: 30px;
+  height: 2px;
+  background-color: @plus;
+  &::after{
+    position:absolute;
+    content: "";
+    width: 30px;
+    height: 2px;
+    background-color: @plus;
+    transform: rotate(90deg);
+  }
+}
+.product-all__title{
+  .font__size(16px, 20px);
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  color: @info_color;
+  margin-top: 23px;
+  margin-bottom: 8px;
+}
+.all-goods__subtitle{
+  .font__size(12px, 16px);
+  .font__arial;
+  text-align: center;
+  color: @special_dark-grey;
+  margin-top: 0;
+  margin-bottom: 21px;
 }
