--- a/source/less/button.less
+++ b/source/less/button.less
@@ -12,3 +12,25 @@
 .button-all{
   background-color: @basic_color;
 }
+.button-form{
+  text-decoration: none;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  width: 280px;
+  background-color: #68B738;
+  font-size: 16px;
+  padding: 15px 44px 15px 44px;
+  border: none;
+}
+.button--all{
+  color: @special_dark-grey;
+  background-color:@basic_grey;
+}
+.button--margin-bottom{
+  margin-bottom: 14px;
+}
+.button--ag-position{
+  margin-bottom: 19px;
+}
