--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -5,6 +5,10 @@
   @media(min-width: 768px){}
   @media(min-width: 1280px){}
 }
+.center__no-frame {
+  width: 320px;
+  margin: 0 auto;
+}
 .unpadding {
   padding: 0;
   margin: 0;
