--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,31 +5,19 @@
 @import "mixins";
 @import "button";
 @import "base/layout";
+@import "visually-hidden";
 
 // blocks index
-@import "blocks/navigation";
+@import "blocks/header";
 @import "blocks/diet";
 @import "blocks/description";
 @import "blocks/example";
 @import "blocks/footer";
 
+
 // blocks form
 @import "blocks/cat-profile";
 // blocks catalog
+@import "blocks/main-catalog";
 @import "blocks/product";
-body {
-  font-family: "Oswald", Arial, sans-serif;
-  font-weight: 400;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
+@import "blocks/additional-goods";
